# Hugo

./: CLAUDE.md  README.md  pyproject.toml  requirements-pi.txt
.github/workflows/: pages.yml
hugo/: __init__.py
hugo/capture/: __init__.py  camera.py
hugo/classifier/: __init__.py  anthropic_fallback.py  classify.py  llm.py
hugo/hardware/: __init__.py  projector.py  servos.py  tof_sensor.py
hugo/helpers/: __init__.py  hint.py  math_helper.py  reading_helper.py
hugo/interaction/: __init__.py  dwell.py  finger_detect.py  help_buttons.py  touch_fusion.py
hugo/layout/: __init__.py  analyze.py
hugo/ocr/: __init__.py  extract.py
hugo/orchestrator/: __init__.py  __main__.py  pipeline.py
hugo/pi/: __init__.py  __main__.py  camera.py  config.py  orchestrator.py  renderer.py  tof.py  voice.py
hugo/projection/: __init__.py  renderer.py
hugo/server/: __init__.py  config.py  inference_api.py
hugo/shared/: __init__.py  models.py
hugo/vision/: __init__.py  preprocess.py
hugo/voice/: __init__.py  commands.py  led.py  mic.py  vad.py  wake_word.py
site/: app.js  index.html  style.css
tests/: generate_fixtures.py  test_helpers.py  test_imports.py  test_llm_classifier.py  test_pipeline.py  test_renderer.py  test_voice.py
