[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hugo"
version = "0.2.0"
description = "Homework helping projector box for 4-7 year olds"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.26",
    "pytesseract>=0.3",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["hugo*"]
